--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
     <div class="container">
             <h3 class="brand">The weather</h3>
         <div>
-        <h1 class="temp">16 &#176; </h1>
-        <div class="city-time">
-            <div id="getLocation"></div>
-            <h1 class="name"></h1><br>
-            <span class="feels-like"></span><br><br>
-            <small><span class="time"></span>
-            <span class="date"></span></small>
+            <h1 class="temp">16 &#176; </h1>
+            <div class="city-time">
+                <div id="getLocation"></div>
+                <h1 class="name"></h1><br>
+                <span class="feels-like"></span><br><br>
+                <small><span class="time"></span>
+                <span class="date"></span></small>
+            </div>
+            <div class="weather">
+                <img src="https://img.icons8.com/ios/50/000000/cloud.png" alt="icon" class="icon" width="50" height="50">
+                <span class="condition">Cloudy</span>
+            </div>
+
         </div>
-        <div class="weather">
-            <img src="https://img.icons8.com/ios/50/000000/cloud.png" alt="icon" class="icon" width="50" height="50">
-            <span class="condition">Cloudy</span>
-        </div>
+    <div id="forecastContainer">
+        
     </div>
+
 </div>
 <div class="panel">
     <form action="" id="locationInput">
